2004-07-15 Hoda Amer
	Fix for PR 68500: [Outline View] After doing a rename of a class, the outline viewer does not display the new name (just the old name)

2004-07-09 Hoda Amer
	Fix for PR 69510 : [C++ Class Wizard] error message in C++ Class Wizard if invoke Class Wizard from existing C++ class in C/C++ Project View
	
2004-07-08 Hoda Amer
	Partial fix for PR 69439: content assist confusion	
	
2004-07-08 Bogdan Gheorghe
	Fix for 64177: [Search] Clean up Selection Search UI
	Fix for 57121: [Search] Searching when all of the "Search For" checkboxes are unchecked causes an exception
	Fix for 68249: Accessibility: Project Settings Indexer description chopped
	
	* src/org/eclipse/cdt/internal/ui/CPluginResources.properties
	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefintionIds.java
	* src/org/eclipse/cdt/internal/ui/search/CSearchPage.java
	* src/org/eclipse/cdt/internal/ui/search/NewSearchResultCollector.java
	* src/org/eclipse/cdt/internal/ui/search/actions/DeclarationsSearchGroup.java
	* src/org/eclipse/cdt/internal/ui/search/actions/ReferencesSearchGroup.java
	* src/org/eclipse/cdt/internal/ui/search/actions/SelectionSearchGroup.java
	* plugin.xml

2004-07-08 Bogdan Gheorghe	
	Add some fixes from head branch: Added support for search name grouping.
	
2004-07-07 Hoda Amer
	Fix for PR 69411: Bad label: WizardNewFileCreationPage.progress

2004-07-06 Chris Weibe

	Fix for PR 69199
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementLabels.java

2004-07-06 Hoda Amer
	Fix for PR 69330 : Outline is flickering.
	
2004-07-06 Chris Wiebe
	This patch fixes a problem when using the class wizard, where the system
	include separator '<' was used for project-relative include path instead
	of '"'.
	
2004-06-29 Alain Magloire

	Fix for PR 68820.